--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2rem;
+  padding: 1em;
+  background-color: rgb(0, 0, 0);
+}
+
+.navbar-logo {
+  margin-right: 0.3em;
+}
+
+.navbar-title {
+  display: inline-block;
+  vertical-align:middle;
+  text-align: center;
+  font-size: 2rem;
   color: white;
+  margin-right: 0.3em;
+  line-height: 3.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.search-form {
+  width: 100%;
+  line-height: 2.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-input {
+  margin-left: 0.2em;
+  font-size: 2rem;
+  width: 80%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.search-button {
+  background-color: rgb(41, 39, 39);
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.video-list {
+  padding: 0.5em;
+  list-style: none;
+  display: flex;
+  line-height: 2.5rem;
+}
+
+.video-thumbnail {
+  display: inline-block;
+  margin-right: 0.3em;
+  vertical-align: middle;
+}
+
+.video-title {
+  display: inline-block;
+  vertical-align: middle;
 }
