--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
 * {
   box-sizing: border-box;
+  /* padding-left: 3%;
+  padding-right: 3%; */
 }
 
 .navbar {
   display: flex;
-  font-size: 2rem;
-  padding: 1em;
+  font-size: 1rem;
+  padding: 0.3em;
+  margin-left: 2.3em;
+  margin-right: 2.3em;
   background-color: rgb(0, 0, 0);
+}
+
+.navbar-a {
+  display: flex;
+  text-decoration: none;
 }
 
 .navbar-logo {
@@ -25,21 +34,29 @@
 
 .search-form {
   width: 100%;
-  line-height: 2.5rem;
+  /* line-height: 2rem; */
 }
 
 .search-input {
   margin-left: 0.2em;
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 80%;
-  display: inline-block;
+  /* display: inline-block; */
   vertical-align: middle;
 }
 
 .search-button {
   background-color: rgb(41, 39, 39);
-  display: inline-block;
+  /* display: inline-block; */
   vertical-align: middle;
+  /* padding: 5px; */
+  /* width: 100px; */
+}
+
+.videolist-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 6px;
 }
 
 .video-list {
@@ -47,15 +64,40 @@
   list-style: none;
   display: flex;
   line-height: 2.5rem;
+
+  align-items: center;
+  background-color: white;
+  border: 1px solid #cfcfcf;
+  box-shadow: 4px 5px 5px #cfcfcf;
+  box-sizing: border-box;
+  cursor: pointer;
+  width: 50%;
+}
+
+.video-list:hover {
+  transform:scale(1.05); 
+}
+
+.video-list-item {
+  text-decoration: none;
+  display: flex;
+  width: 100%;
+  color: black;
 }
 
 .video-thumbnail {
-  display: inline-block;
+  display: block;
   margin-right: 0.3em;
   vertical-align: middle;
+  width: 50%;
 }
 
 .video-title {
-  display: inline-block;
+  display: block;
   vertical-align: middle;
+  width: 50%;
+}
+
+.video-title-span {
+  font-weight: bold;
 }
