--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  /* padding-left: 3%;
-  padding-right: 3%; */
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .navbar {
