--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
   padding-left: 3%;
   padding-right: 3%;
@@ -34,23 +34,18 @@
 
 .search-form {
   width: 100%;
-  /* line-height: 2rem; */
 }
 
 .search-input {
   margin-left: 0.2em;
   font-size: 1.5rem;
   width: 80%;
-  /* display: inline-block; */
   vertical-align: middle;
 }
 
 .search-button {
   background-color: rgb(41, 39, 39);
-  /* display: inline-block; */
   vertical-align: middle;
-  /* padding: 5px; */
-  /* width: 100px; */
 }
 
 .videolist-container {
@@ -100,4 +95,4 @@
 
 .video-title-span {
   font-weight: bold;
-}
+} */
