--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,3 +1,23 @@
 .app {
   max-width: 80rem;
 }
+
+/* section {
+  display: flex;
+} */
+
+section.content {
+  display: flex;
+}
+
+.content {
+  display:felx;
+}
+
+.detail {
+  flex: 1 1 70%;
+}
+
+.list {
+  flex: 1 1 30%;
+}
