feat: back to the list when searching

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -21,3 +21,9 @@ section.content {
 .list {
   flex: 1 1 30%;
 }
+
+@media screen and (max-width: 890px) {
+  section.content {
+    flex-direction: column;
+  }
+}
