--- a/src/app.module.css
+++ b/src/app.module.css
@@ -11,7 +11,7 @@ section.content {
 }
 
 .content {
-  display:felx;
+  display: felx;
 }
 
 .detail {
@@ -22,7 +22,7 @@ section.content {
   flex: 1 1 30%;
 }
 
-@media screen and (max-width: 890px) {
+@media screen and (max-width: 48rem) {
   section.content {
     flex-direction: column;
   }
