--- a/src/components/search_header/search_header.module.css
+++ b/src/components/search_header/search_header.module.css
@@ -1,39 +1,40 @@
 .header {
-    display: flex;
-    height: 4rem;
-    padding: 0.8em 1em;
-    background: black;
-    color: white;
+  display: flex;
+  height: 4rem;
+  padding: 0.8em 1em;
+  background: black;
+  color: white;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
-    margin-right: 1em;
-    text-decoration: none;
-    color: white;
+  display: flex;
+  align-items: center;
+  margin-right: 1em;
+  text-decoration: none;
+  color: white;
 }
 
 .logo:hover {
-    color: rgb(253, 222, 251);
+  color: rgb(253, 222, 251);
 }
 
 .input {
-    flex-basis: 100%;
-    font-size: 1.2rem;
-    outline: 0;
+  flex-basis: 100%;
+  font-size: 1.2rem;
+  outline: 0;
+  width: 100%;
 }
 
 .button {
-    background-color: darkgray;
-    outline: 0;
+  background-color: darkgray;
+  outline: 0;
 }
 
 .button:hover {
-    background-color: rgb(253, 222, 251);
+  background-color: rgb(253, 222, 251);
 }
 
 .buttonImg {
-    height: 100%;
-    padding: 0.5em 0.2em;
+  height: 100%;
+  padding: 0.5em 0.2em;
 }
